--- a/app/views/skm/entry_headers/new_step_4.html.erb
+++ b/app/views/skm/entry_headers/new_step_4.html.erb
@@ -38,7 +38,7 @@
           <table class="show-table">
             <tbody>
                 <tr>
-                  <td><%= raw(e[:entry_content]) %></td>
+                  <td class="data-col"><%= raw(e[:entry_content]) %></td>
                 </tr>
             </tbody>
           </table>
@@ -46,7 +46,6 @@
       </div>
       <% end %>
     </div>
-
     <table class="page-block-footer">
       <tr>
         <td class="page-block-title"></td>
