--- a/app/views/skm/entry_headers/_edit_form.html.erb
+++ b/app/views/skm/entry_headers/_edit_form.html.erb
@@ -1,99 +1,96 @@
 <%= app_title %>
-<% require_javascript(:extjs) %>
-<% require_css(:extjs) %>
-<%= form_for(@entry_header,:url=>{:action=>"update"},:builder => LabellingFormBuilder, :html => {:name => "edit_form", :id => "edit_form",:multipart => true}) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@entry_header,:url=>{:action=>"update"},:builder => CustomFormBuilder, :html => {:name => "edit_form", :id => "edit_form",:multipart => true}) do |f| %>
+  <% content_for :form_block_common do%>
+    <table class="form-table" cellpadding="0" cellspacing="0">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_skm_entry_header_edit)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:save_as_published), {}, :href => "javascript:void(0);", :onclick => "submit_published();"%></div>
-            <div class="button"><%= link_to t(:cancel), {:controller => "skm/entry_headers", :action => "index"}  %></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_entry_header_doc_number)%></label></td>
+            <td class="data-2col"><label><%= @entry_header.doc_number%></label></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_entry_header_title)%></label></td>
+            <td class="data-2col"><%=f.text_field :entry_title, :required=>true, :size => 80%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_entry_header_keyword_tags)%></label></td>
+            <td class="data-2col"><%=f.text_field :keyword_tags, :size => 80%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_channel)%></label></td>
+            <td class="data-2col"><%= f.lov_field :channel_id, Skm::Channel, {:required => true}%></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @entry_header%>
-    <div class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_entry_header_doc_number)%></label></td>
-              <td class="data2Col"><%= @entry_header.doc_number%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_entry_header_title)%></label></td>
-              <td class="data2Col"><%=f.text_field :entry_title, :required=>true, :size => 80%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_entry_header_keyword_tags)%></label></td>
-              <td class="data2Col"><%=f.text_field :keyword_tags, :size => 80%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_channel)%></label></td>
-              <td class="data2Col"><%= f.lov_field :channel_id, Skm::Channel, {:required => true}%></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-    <% @entry_header.entry_details.order("line_num ASC").each do |ed| %>
-    <div class="pbSubheader tertiaryPalette">
-      <h3><%= ed.element_name %>&nbsp;<%= ed.required_flag == "Y" ? "(必填)" : "" %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <%= fields_for("skm_entry_details[]", ed) do |ef| %>
-            <tr>
-              <td><% if ed.required_flag == "Y"%>
-                  <%= ef.text_area :entry_content, {:rows => ed.default_rows, :style => "width:100%;", :jrequired => true, :value => ed.entry_content} %>
-                  <% else %>
-                  <%= ef.text_area :entry_content, {:rows => ed.default_rows, :style => "width:100%;", :value => ed.entry_content} %>
-                  <% end %>
-              </td>
-            </tr>
-            <% end %>
-        </tbody>
-      </table>
-    </div>
-    <% end %>
-    <!-- 加载上传附件模板 -->
-    <%= render :partial=>"helper/upload_file_template",:locals=>{:type_flag => true, :exist_attachments => list_exist_skm_entry_attachments(@entry_header.attachments, @entry_header.id), :attachments => @entry_header.attachments,:delete_url => {:controller => "skm/entry_headers", :action => "remove_exits_attachment"} } %>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_to t(:save_as_published), {}, :href => "javascript:void(0);", :onclick => "submit_published();",:class => "btn btn-primary"%>
+    <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
+  <% end %>
 
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= link_to t(:save_as_published), {}, :href => "javascript:void(0);", :onclick => "submit_published();"%></div>
-            <div class="button"><%= link_to t(:cancel), {:controller => "skm/entry_headers", :action => "index"}  %></div>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+          <td class="page-block-title">
+            <h2 class="block-title"><%=t(:label_skm_entry_header_edit)%></h2>
           </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons   %>
+          </td>
+          <td class="page-block-help"></td>
         </tr>
-      </tbody>
+    </table>
+    <%= error_for @entry_header %>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 个人信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_common_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+
+        <% @entry_header.entry_details.order("line_num ASC").each do |ed| %>
+          <div class="sub-page-block-header">
+            <h3 class="sub-page-block-title"><%= ed.element_name %>&nbsp;<%= ed.required_flag == "Y" ? "(必填)" : "" %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <table class="show-table">
+              <tbody>
+                  <%= fields_for("skm_entry_details[]", ed) do |ef| %>
+                  <tr>
+                    <td class="data-col" style="padding: 2px 20px 2px 10px !important;"><% if ed.required_flag == "Y"%>
+                        <%= ef.text_area :entry_content, {:rows => ed.default_rows, :style => "width:100%;", :required => true, :value => ed.entry_content} %>
+                        <% else %>
+                        <%= ef.text_area :entry_content, {:rows => ed.default_rows, :style => "width:100%;", :value => ed.entry_content} %>
+                        <% end %>
+                    </td>
+                  </tr>
+                  <% end %>
+              </tbody>
+            </table>
+          </div>
+        <% end %>
+        <!-- 加载上传附件模板 -->
+        <%= render :partial=>"helper/upload_file_template",:locals=>{:type_flag => true, :exist_attachments => list_exist_skm_entry_attachments(@entry_header.attachments, @entry_header.id), :attachments => @entry_header.attachments,:delete_url => {:controller => "skm/entry_headers", :action => "remove_exits_attachment"} } %>
+      </div>
+    </div>
+
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
     </table>
   </div>
-</div>
+<% end %>
 <script type="text/javascript">
   function submit_draft(){
-    if (confirm("文章内容已被修改，是否保存为新的版本？"))
-    {
+    if (confirm("文章内容已被修改，是否保存为新的版本？")){
         document.edit_form.action = "<%= url_for(:controller => 'skm/entry_headers', :action => 'update', :status => "DRAFT", :new => "1")%>";
     }
     else
@@ -104,20 +101,14 @@
   }
 
   function submit_published(){
-    if (confirm("文章内容已被修改，是否保存为新的版本？"))
-    {
+    if (confirm("文章内容已被修改，是否保存为新的版本？")){
         document.edit_form.action = document.edit_form.action = "<%= url_for(:controller => 'skm/entry_headers', :action => 'update', :status => "PUBLISHED", :new => "1")%>";
     }
-    else
-    {
+    else{
         document.edit_form.action = "<%= url_for(:controller => 'skm/entry_headers', :action => 'update', :status => "PUBLISHED")%>";
     }
     document.edit_form.submit();
   }
-</script>    
-<% end %>
-
-<script type="text/javascript">
   function delete_subject(tar){
         $("#tr_" + tar).remove();
   }
@@ -125,5 +116,4 @@
   function add_subject(tar){
         $("#tr_");
   }
-
 </script>
