--- a/app/views/skm/entry_headers/new_step_video_upload.html.erb
+++ b/app/views/skm/entry_headers/new_step_video_upload.html.erb
@@ -1,80 +1,78 @@
 <%= app_title({:description => t(:new)}) %>
-<%= form_for(@entry_header,:url=>{:action=>"video_create"}, :html => {:name => "new_skm_entry_header", :multipart => true}, :builder => LabellingFormBuilder) do |f| %>
-<div  class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@entry_header,:url=>{:action=>"video_create"}, :html => {:name => "new_skm_entry_header", :multipart => true}, :builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common do%>
+    <table class="form-table" cellpadding="0" cellspacing="0">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_skm_entry_video_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save_as_published)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_entry_header_title)%></label></td>
+            <td class="data-2col"><%= f.text_field :entry_title, :size => 40, :required => true%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_entry_header_keyword_tags)%></label></td>
+            <td class="data-2col"><%= f.text_field :keyword_tags, :size => 40%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_channel)%></label></td>
+            <td class="data-2col"><%= f.lov_field :channel_id, Skm::Channel, {:required => true}%></td>
+          </tr>
+          <tr>
+            <td class="label-col">
+              <label><%= t(:label_skm_entry_video) %></label>
+            </td>
+            <td class="data-2col">
+              <%= file_field_tag :skm_video, :jrequired => true, :accept => "video/*" %>
+            </td>
+          </tr>
+          <tr>
+            <td class="label-col">
+              <label><%= t(:description) %></label>
+            </td>
+            <td class="data-2col">
+              <%= text_area_tag :skm_video_description, (@video_description if @video_description),:cols => 40, :rows => 5,:class=>"input-xlarge" %>
+            </td>
+          </tr>
       </tbody>
     </table>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save_as_published), :class=>"btn btn-primary"%>
+    <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+          <td class="page-block-title">
+            <h2 class="block-title"><%= t(:label_skm_entry_create_video) %></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons   %>
+          </td>
+          <td class="page-block-help"></td>
+        </tr>
+    </table>
+    <%= error_for @entry_header %>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 个人信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_common_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+    </div>
+
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
   </div>
-  <div class="pbBody">
-    <%= error_for @entry_header%>
-    <%= flash_notice %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_skm_entry_create_video) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_entry_header_title)%></label></td>
-              <td class="data2Col"><%= f.text_field :entry_title, :size => 40, :required => true%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_entry_header_keyword_tags)%></label></td>
-              <td class="data2Col"><%= f.text_field :keyword_tags, :size => 40%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_channel)%></label></td>
-              <td class="data2Col"><%= f.lov_field :channel_id, Skm::Channel, {:required => true}%></td>
-            </tr>
-            <tr>
-              <td class="labelCol">
-                <%= t(:label_skm_entry_video) %>
-              </td>
-              <td class="data2Col">
-                <%= file_field_tag :skm_video, :jrequired => true, :accept => "video/*" %>
-              </td>
-            </tr>
-            <tr>
-              <td class="labelCol">
-                <%= t(:description) %>
-              </td>
-              <td class="data2Col">
-                <%= text_area_tag :skm_video_description, (@video_description if @video_description),:cols => 40, :rows => 5 %>
-              </td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="pbBottomButtons">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"></td>
-              <td id="bottomButtonRow" class="pbButtonb">
-                <div class="button"><%= f.submit t(:save_as_published)%></div>
-                <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-    </div>
-  </div>
-</div>
 <% end %>
