修改事故单页面样式，改用bootstrap替换

--- a/app/views/chm/change_requests/_show_tmp.html.erb
+++ b/app/views/chm/change_requests/_show_tmp.html.erb
@@ -29,7 +29,7 @@
         <div style="margin-left: 15px; display:inline;">(<a href="javascript:void(0)" id="showMore" class="toggle-button" ref="incidentDetail" collapsedText="<%= t(:label_icm_incident_less_info) %>" expandedText="<%= t(:label_icm_incident_more_info) %>"><%= t(:label_icm_incident_more_info) %></a>)</div>
       </div>
       <div class="sub-page-block-body" id="incidentDetail">
-        <table class="show-table">
+        <table class="detail-list">
           <tbody>
               <tr>
                 <td class="label-col"><label ><%=t(:label_chm_change_request_external_system)%></label></td>
