--- a/app/views/chm/change_requests/show_detail.html.erb
+++ b/app/views/chm/change_requests/show_detail.html.erb
@@ -64,7 +64,7 @@
 <!--页面结构-->
 <div class="page-block">
   <table class="page-block-header"><tr>
-    <td class="page-block-title">
+    <td class="page-block-title" style="text-align: left;">
       <h2 class="block-title"><%="(#{@change_request[:change_status_name]})[#{@change_request[:request_number]}]#{@change_request[:title]}"%></h2>
     </td>
     <td class="page-block-button">
@@ -78,7 +78,7 @@
 <!--页面结构-->
 <div class="page-block">
   <table class="page-block-header"><tr>
-    <td class="page-block-title">
+    <td class="page-block-title" style="text-align: left;">
       <h2 class="block-title"><%=t(:label_chm_change_request_task)%></h2>
     </td>
     <td class="page-block-button">
@@ -93,7 +93,7 @@
 <!--页面结构-->
 <div class="page-block">
   <table class="page-block-header"><tr>
-    <td class="page-block-title">
+    <td class="page-block-title" style="text-align: left;">
       <h2 class="block-title"><%=t(:label_chm_change_request_incident_requests)%></h2>
     </td>
     <td class="page-block-button">
