--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -1,6 +1,4 @@
 <% require_jscss(:waypoints) %>
-
-
 <style type="text/css">
     ul {
         padding-left: 40px;
@@ -181,51 +179,6 @@
 <% end %>
 
 
-<% content_for :change_request_tab do %>
-    <% if @incident_request.change_request_id.present? %>
-        <!-- 处理关联的变更单 -->
-        <!-- tab -->
-        <div class="mini-tab" id="tabNav" style="margin-bottom: 10px;">
-          <ul class="mini-tab-lists">
-            <li class="mini-tab-list current-tab" id="nav_0" ref="incidentReply">
-              <a href="javascript:void(0)"><%= t(:label_icm_incident_journal_list) %></a>
-            </li>
-            <li id="nav_1" class="mini-tab-list" ref="changeRequest">
-              <a href="javascript:void(0)"><%= t(:label_chm_change_request) %></a>
-            </li>
-          </ul>
-        </div>
-        <!-- end tab -->
-        <div class="hidden" id="changeRequest" href="<%= url_for(:controller=>"chm/change_requests", :action=>"show_detail", :id=>@incident_request.change_request_id||"001") %>">
-
-        </div>
-        <script type="text/javascript">
-            $(function() {
-                $("#tabNav li").live("click", function(e) {
-                    $("#tabNav li").removeClass("current-tab");
-                    $(e.currentTarget).addClass("current-tab");
-                    $("#tabNav li").each(function(index, element) {
-                        var ref = $("#" + $(element).attr("ref"));
-                        console.debug("#" + $(element).attr("ref"));
-                        if (ref && !ref.hasClass("hidden")) {
-                            ref.addClass("hidden");
-                        }
-                    });
-                    var currentRef = $("#" + $(e.currentTarget).attr("ref"));
-                    if (currentRef && currentRef.hasClass("hidden")) {
-                        currentRef.removeClass("hidden");
-                        if (currentRef.attr("href") && !currentRef.attr("loaded")) {
-                            currentRef.load(currentRef.attr("href"));
-                            currentRef.attr("loaded", "true");
-                        }
-                    }
-                });
-            });
-        </script>
-    <% end %>
-<% end %>
-
-
 <% content_for :incident_request_reply_form do %>
        <% if @incident_request.watcher?(Irm::Person.current.id)&&allow_to_function?(:reply_incident_request)&&!@incident_request.close?&&!@incident_request.permanent_close? %>
            <%= form_for(@incident_reply, :url=>{:action=>"create", :format => "js"}, :builder => CustomFormBuilder, :html => {:multipart => true, :target => "frame"}) do |f| %>
@@ -296,7 +249,7 @@
               </div>
 
 
-                <div class="page-block-body">
+              <div class="page-block-body">
                 <table class="form-table"  style="width: 100%;">
                   <tbody>
                   <tr>
@@ -304,7 +257,7 @@
                         <%= sub_f.hidden_field(:incident_request_id) %>
                         <td class="data-4col" colspan="4">
                           <%= sub_f.text_area :message_body, :id=>"msgEditor", :jrequired => true, :rows=>8,:cols=>20,:class=>"input-xxlarge" %>
-                          <%= rich_text_area("msgEditor", true) %>
+                          <%= xheditor("msgEditor", true) %>
                         </td>
                     <% end %>
                   </tr>
@@ -315,7 +268,6 @@
                   </tr>
                   </tbody>
                 </table>
-
               </div>
               <table class="page-block-footer"><tr>
                     <td class="page-block-title">
@@ -333,10 +285,9 @@
        <% end %>
        <iframe id='frame' name="frame" style="width:1px;height:1px;border:0px" src="about:blank"></iframe>
 <% end %>
-
 <% content_for :incident_request_journals do %>
 
- <div id="incidentReply">
+ <div class="page-block" id="incidentReply">
    <div id="histories">
      <div style="padding: 0 0 10px 0; font-weight: bold;">
        <table cellpadding="0" cellspacing="0" border="0">
@@ -351,7 +302,7 @@
          </tbody>
        </table>
      </div>
-     <div class="pbBody">
+     <div class="page-block-body">
        <div class="reply">
          <div id="journal_0" class="reply-header" submit_by="<%= @incident_request.submitted_by %>">
            <div style="float:left">
@@ -382,7 +333,70 @@
 
 <% end %>
 
+<% content_for :change_request_tab do %>
+    <% if @incident_request.change_request_id.present? %>
+        <!-- 处理关联的变更单 -->
+        <!-- tabs -->
+        <div class="tabbable" id="tabNav">
+          <ul class="nav nav-tabs">
+            <li class="active" id="nav_0" ref="incidentReply"><a href="#tab1" data-toggle="tab"><%= t(:label_icm_incident_journal_list) %></a></li>
+            <li id="nav_1" ref="changeRequest"><a href="#tab2" data-toggle="tab"><%= t(:label_chm_change_request) %></a></li>
+          </ul>
+          <div class="tab-content">
+            <div class="tab-pane active" id="tab1">
+              <%= content_for :incident_request_journals %>
+            </div>
+            <div class="tab-pane" id="tab2">
+              <div class="hidden" id="changeRequest" href="<%= url_for(:controller=>"chm/change_requests", :action=>"show_detail", :id=>@incident_request.change_request_id||"001") %>"></div>
+            </div>
+          </div>
+        </div>
+        <!--
+        <div class="mini-tab" id="tabNav" style="margin-bottom: 10px;">
+          <ul class="mini-tab-lists">
+            <li class="mini-tab-list current-tab" id="nav_0" ref="incidentReply">
+              <a href="javascript:void(0)"><%= t(:label_icm_incident_journal_list) %></a>
+            </li>
+            <li id="nav_1" class="mini-tab-list" ref="changeRequest">
+              <a href="javascript:void(0)"><%= t(:label_chm_change_request) %></a>
+            </li>
+          </ul>
+        </div> -->
+        <!-- end tab -->
 
+        <!-- <div class="hidden" id="changeRequest" href="<%= url_for(:controller=>"chm/change_requests", :action=>"show_detail", :id=>@incident_request.change_request_id||"001") %>"></div>
+        -->
+        <script type="text/javascript">
+            $(function() {
+                $("#tabNav li").live("click", function(e) {
+                    $("#tabNav li").removeClass("active");
+                    $(e.currentTarget).addClass("active");
+                    $("#tabNav li").each(function(index, element) {
+                        var ref = $("#" + $(element).attr("ref"));
+                        console.debug("#" + $(element).attr("ref"));
+                        if (ref && !ref.hasClass("hidden")) {
+                            ref.addClass("hidden");
+                        }
+                    });
+                    var currentRef = $("#" + $(e.currentTarget).attr("ref"));
+                    if (currentRef && currentRef.hasClass("hidden")) {
+                        currentRef.removeClass("hidden");
+                        if (currentRef.attr("href") && !currentRef.attr("loaded")) {
+                            var url = currentRef.attr("href");
+//                            if(url.indexOf('?') > 0) {
+//                                url += '&_dom_id=tab2';
+//                            }else{
+//                                url += '?_dom_id=tab2';
+//                            }
+                            currentRef.load(url);
+                            currentRef.attr("loaded", "true");
+                        }
+                    }
+                });
+            });
+        </script>
+    <% end %>
+<% end %>
 
 <!--页面结构  头部-->
 <div class="page-block">
@@ -412,7 +426,6 @@
       <div class="sub-page-block-body">
         <%= content_for :block_header_content %>
         <%= content_for :change_request_tab %>
-        <%= content_for :incident_request_journals %>
       </div>
     </div>
 
