--- a/app/views/icm/incident_requests/_customer_list.html.erb
+++ b/app/views/icm/incident_requests/_customer_list.html.erb
@@ -1,36 +1,6 @@
-<div class="pbBody">
-        <div id="incident_requests" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:label_icm_reply),{:controller=>"icm/incident_journals",:action=>"new",:request_id=>"{id}"}) %>
-          </div>
-          <div id="title" style="display:none">
-            var bookmark = '';
-            if('{kb_flag}' == 'Y'){
-               bookmark = '<%= get_img_icon("bookmark")%>'
-            }
-            if('{reply_flag}' == 'Y'&&'{close_flag}' == 'N'){
-              bookmark + '<%= icon_link("btn_reply", t(:label_icm_reply),{:controller=>"icm/incident_journals",:action=>"new",:request_id=>"{id}"}) %><%= link_to( "({incident_status_id_label}){title}",{:controller=>"icm/incident_journals",:action=>"new",:request_id=>"{id}"}) %>'
-            }
-            else{
-              bookmark + '<%= link_to( "({incident_status_id_label}){title}",{:controller=>"icm/incident_journals",:action=>"new",:request_id=>"{id}"}) %>'
-            }
-          </div>
-        </div>
-       <%= datatable("incident_requests",{:action=>"get_data",:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:hidden=>true,:width=>"50px"},
-                       { :key => "request_number", :label => t(:label_icm_incident_request_request_number_shot),:searchable=>true,:width=>"35px"},
-                       { :key => "title",:formatter=>"Y.irm.stemplate",:label => t(:label_icm_incident_request_title),:searchable=>true },
-                       { :key => "incident_status_id_label",:hidden=>true },
-                       { :key => "reply_flag",:hidden=>true },
-                       { :key => "close_flag",:hidden=>true },
-                       { :key => "kb_flag",:hidden=>true },
-                       { :key => "organization_id_label", :label => t(:label_icm_incident_request_organization), :width =>"180px"},
-                       { :key => "last_response_date", :label => t(:label_icm_incident_request_last_date),:width=>"140px" },
-                       { :key => "external_system_id_label", :label => t(:label_irm_external_system),:width=>"140px" },
-                       { :key => "estimated_date", :label => t(:label_icm_incident_request_estimated_date),:width=>"120px" }
-                       ],{:export_data=>"#incidentRequestExport",:not_load=>true,:row_perpage=>10,:search_box=>"incident_requestsSearchBox",:html=>true,:view_filter=>true})%>
-      <div id="incidentRequestsPaginatorBox"></div>
-</div>
+<div id="incident_requests"></div>
+<%= datatable("incident_requests",{:action=>"get_data"},[],{:export_data=>"#incidentRequestExport",:not_load=>true,:search_box=>"incident_requestsSearchBox",:html=>true,:view_filter=>true})%>
+<div id="incidentRequestsPaginatorBox"></div>
 
 
 
