--- a/app/views/icm/incident_requests/_new_form.html.erb
+++ b/app/views/icm/incident_requests/_new_form.html.erb
@@ -66,7 +66,7 @@
            <tr>
              <td class="label-col"><label for="incident_estimated_date"><%=t(:label_icm_incident_request_estimated_date)%></label></td>
              <td class="data-3col">
-               <%= f.text_field(:estimated_date,:size=>12,:class=>"date",:id=>"incident_estimated_date")%>
+               <%= f.date_field(:estimated_date,:size=>12,:class=>"date",:id=>"incident_estimated_date")%>
              </td>
            </tr>
            <tr>
@@ -78,16 +78,18 @@
              <td class="label-col"><label for="incident_request_summary"><%=t(:label_icm_incident_request_summary)%></label></td>
              <td class="data-3col" colspan="3">
                <%=f.text_area :summary,:rows=>8,:cols=>100,:value=>@incident_request.summary, :required=>true ,:class=>"input-xxlarge",:id=>"incident_request_summary"%>
-               <%= rich_text_area("incident_request_summary") %>
+               <%= xheditor("incident_request_summary") %>
              </td>
 
            </tr>
+           <!--
            <tr>
              <td class="label-col"></td>
              <td class="data-3col" colspan="3">
                <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"new_incident_request_file"} %>
              </td>
            </tr>
+           -->
        </tbody>
     </table>
   <% end %>
@@ -99,75 +101,75 @@
 
     <table class="form-table">
       <tbody>
-                    <tr>
-                        <td class="label-col"><label for="incident_request_contact_id"><%=t(:label_icm_incident_request_contact)%></label></td>
-                        <td class="data-col">
-                          <div style="display:inline">
-                            <%=f.lov_field :contact_id,Irm::Person,{:required=>true,:id=>"incident_request_contact_id",:class=>"input-medium"}%>
-                          </div>
-                        </td>
-                        <td class="label-col"><label for="incident_request_contact_number"><%=t(:label_icm_incident_request_contact_number)%></label></td>
-                        <td class="data-col">
-                          <%=f.text_field :contact_number,:size=>17,:id=>"incident_request_contact_number",:required=>true%>
-                        </td>
+        <tr>
+            <td class="label-col"><label for="incident_request_contact_id"><%=t(:label_icm_incident_request_contact)%></label></td>
+            <td class="data-col">
+              <div style="display:inline">
+                <%=f.lov_field :contact_id,Irm::Person,{:required=>true,:id=>"incident_request_contact_id",:class=>"input-medium"}%>
+              </div>
+            </td>
+            <td class="label-col"><label for="incident_request_contact_number"><%=t(:label_icm_incident_request_contact_number)%></label></td>
+            <td class="data-col">
+              <%=f.text_field :contact_number,:size=>17,:id=>"incident_request_contact_number",:required=>true%>
+            </td>
 
-                    </tr>
-                    <tr>
-                      <td class="label-col"><label for="incident_request_urgence_code"><%=t(:label_icm_incident_request_urgence_code)%></label></td>
-                      <td class="data-col">
-                        <%=f.select :urgence_id,options_for_select(available_urgence_code,@incident_request.urgence_id||Icm::UrgenceCode.default_id),
-                                                            {},{:required=>true,:id=>"incident_request_urgence_code"}%>
-                      </td>
-                      <td class="label-col"><label for="incident_request_impact_range_code"><%=t(:label_icm_incident_request_impact_range_code)%></label></td>
-                      <td class="data-col">
-                        <%=f.select :impact_range_id,options_for_select(available_impact_range,@incident_request.impact_range_id||Icm::ImpactRange.default_id),
-                                                            {},{:required=>true,:id=>"incident_request_impact_range_code"}%>
-                      </td>
-                    </tr>
-                  <% if allow_to_function?(:assign_incident_request) %>
-                    <tr>
-                      <td class="label-col"><label for="incident_request_support_group_id"><%=t(:label_icm_incident_request_support_group)%></label></td>
-                      <td class="data-col">
-                        <%=f.select :support_group_id,nullable_options_for_select(available_support_group,@incident_request.support_group_id),
-                                                            {},{:id=>"incident_request_support_group_id"}%>
-                      </td>
-                      <td class="label-col"><label for="incident_request_support_person_id"><%=t(:label_icm_incident_request_support_person)%></label></td>
-                      <td class="data-col"><%= f.select(:support_person_id,nullable_options_for_select([],nil),{},
-                                          {
-                                           :id=>"incident_request_support_person_id",
-                                           :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"${incident_request_support_group_id}"),
-                                           :depend=>"incident_request_support_group_id",
-                                           :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
-                                           }) %></td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="incident_request_urgence_code"><%=t(:label_icm_incident_request_urgence_code)%></label></td>
+          <td class="data-col">
+            <%=f.select :urgence_id,options_for_select(available_urgence_code,@incident_request.urgence_id||Icm::UrgenceCode.default_id),
+                                                {},{:required=>true,:id=>"incident_request_urgence_code"}%>
+          </td>
+          <td class="label-col"><label for="incident_request_impact_range_code"><%=t(:label_icm_incident_request_impact_range_code)%></label></td>
+          <td class="data-col">
+            <%=f.select :impact_range_id,options_for_select(available_impact_range,@incident_request.impact_range_id||Icm::ImpactRange.default_id),
+                                                {},{:required=>true,:id=>"incident_request_impact_range_code"}%>
+          </td>
+        </tr>
+      <% if allow_to_function?(:assign_incident_request) %>
+        <tr>
+          <td class="label-col"><label for="incident_request_support_group_id"><%=t(:label_icm_incident_request_support_group)%></label></td>
+          <td class="data-col">
+            <%=f.select :support_group_id,nullable_options_for_select(available_support_group,@incident_request.support_group_id),
+                                                {},{:id=>"incident_request_support_group_id"}%>
+          </td>
+          <td class="label-col"><label for="incident_request_support_person_id"><%=t(:label_icm_incident_request_support_person)%></label></td>
+          <td class="data-col"><%= f.select(:support_person_id,nullable_options_for_select([],nil),{},
+                              {
+                               :id=>"incident_request_support_person_id",
+                               :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"${incident_request_support_group_id}"),
+                               :depend=>"incident_request_support_group_id",
+                               :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
+                               }) %></td>
 
-                    </tr>
-                  <%end%>
-                  <% if allow_to_function?(:create_icdt_rqst_for_other) %>
-                    <tr>
-                      <td class="label-col"><label for="incident_request_report_source_code"><%=t(:label_icm_incident_request_report_source_code)%></label></td>
-                      <td class="data-col">
-                        <%=f.select :report_source_code,nullable_options_for_select(available_request_report_source,@incident_request.report_source_code),
-                                                            {},{:required=>true,:id=>"incident_request_report_source_code"}%>
-                      </td>
+        </tr>
+      <%end%>
+      <% if allow_to_function?(:create_icdt_rqst_for_other) %>
+        <tr>
+          <td class="label-col"><label for="incident_request_report_source_code"><%=t(:label_icm_incident_request_report_source_code)%></label></td>
+          <td class="data-col">
+            <%=f.select :report_source_code,nullable_options_for_select(available_request_report_source,@incident_request.report_source_code),
+                                                {},{:required=>true,:id=>"incident_request_report_source_code"}%>
+          </td>
 
-                      <td class="label-col"><label for="incident_request_incident_status_code"><%=t(:label_icm_incident_request_incident_status_code)%></label></td>
-                      <td class="data-col">
-                        <%=f.select :incident_status_id,options_for_select(available_request_status_code,@incident_request.incident_status_id||Icm::IncidentStatus.default_id),
-                                                            {},{:required=>true,:id=>"incident_request_incident_status_code"}%>
-                      </td>
-                    </tr>
-                 <%end%>
-                    <tr>
-                      <td class="label-col"><label for="incident_request_request_type_code"><%=t(:label_icm_incident_request_request_type_code)%></label></td>
-                      <td class="data-col">
-                        <%=f.select :request_type_code,nullable_options_for_select(available_request_type,@incident_request.request_type_code),
-                                                            {},{:required=>true,:id=>"incident_request_request_type_code"}%>
-                      </td>
-                      <td class="label-col empty">&nbsp;</td>
-                      <td class="data-col empty">&nbsp;</td>
-                    </tr>
-                </tbody>
-              </table>
+          <td class="label-col"><label for="incident_request_incident_status_code"><%=t(:label_icm_incident_request_incident_status_code)%></label></td>
+          <td class="data-col">
+            <%=f.select :incident_status_id,options_for_select(available_request_status_code,@incident_request.incident_status_id||Icm::IncidentStatus.default_id),
+                                                {},{:required=>true,:id=>"incident_request_incident_status_code"}%>
+          </td>
+        </tr>
+     <%end%>
+        <tr>
+          <td class="label-col"><label for="incident_request_request_type_code"><%=t(:label_icm_incident_request_request_type_code)%></label></td>
+          <td class="data-col">
+            <%=f.select :request_type_code,nullable_options_for_select(available_request_type,@incident_request.request_type_code),
+                                                {},{:required=>true,:id=>"incident_request_request_type_code"}%>
+          </td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+    </tbody>
+  </table>
   <% end %>
 
   <!--页面结构-->
@@ -181,10 +183,11 @@
         <% if @return_url%>
           <%= link_to t(:cancel), @return_url,{:class=>"btn cancel"}%>
         <% else %>
-          <%= link_back t(:cancel),{:class=>"btn cancel"}%>
+          <%= link_back t(:cancel),{},{:class=>"btn cancel"}%>
         <% end %>
       </td>
     </tr></table>
+    <%= error_for @change_request %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <div class="sub-page-block-header">
@@ -195,6 +198,8 @@
           <%= content_for :incident_request_base   %>
         </div>
       </div>
+      <!-- 加载上传附件模板 -->
+      <%= render :partial=>"helper/upload_file_template",:locals=>{:type_flag => false, :exist_attachments => list_ir_existed_attachments(@incident_request) } %>
 
       <div class="sub-page-block">
         <div class="sub-page-block-header">
@@ -217,7 +222,7 @@
         <% if @return_url%>
           <%= link_to t(:cancel), @return_url,{:class=>"btn cancel"}%>
         <% else %>
-          <%= link_back t(:cancel),{:class=>"btn cancel"}%>
+          <%= link_back t(:cancel),{},{:class=>"btn cancel"}%>
         <% end %>
       </td>
     </tr></table>
