--- a/app/views/icm/incident_requests/assign_me_data.html.erb
+++ b/app/views/icm/incident_requests/assign_me_data.html.erb
@@ -1,58 +1,14 @@
-<!--  irm datatable      -->
- <div class="irm-datatable">
-   <div>
-       <table count="<%=@count%>" id="incident_requests">
-         <thead>
-           <tr>
-             <th key = "request_number">
-               <div>#</div>
-             </th>
-             <th key="title">
-               <div><%= t(:label_icm_incident_request_title) %></div>
-             </th>
-             <th key="organization_id_label">
-                <div><%= t(:label_icm_incident_request_organization) %></div>
-             </th>
-             <th key="priority_id_label">
-                <div><%= t(:label_icm_incident_request_priority) %></div>
-             </th>
-             <th key="requested_by_label">
-                <div><%= t(:label_icm_incident_request_requested_by) %></div>
-             </th>
-             <th key="external_system_id_label">
-                <div><%= t(:label_irm_external_system) %></div>
-             </th>
-           </tr>
-         </thead>
-         <tbody>
-         <% @datas.each do |data| %>
-         <tr id="<%=data.id %>">
-           <td>
-             <div><%= data[:request_number] %></div>
-           </td>
+<%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
+  <% builder.column(:request_number,{:title=>t(:label_icm_incident_request_request_number_shot), :width => "55px"})%>
+  <% builder.column(:title,{:title=>t(:label_icm_incident_request_title),:searchable=>true})  do |data|%>
+    <%  if(data[:reply_flag].eql?("Y") && data[:close_flag].eql?("N"))%>
+       <%= icon_link("btn_reply", t(:label_icm_reply),{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
+    <% end %>
+    <%= link_to( "(#{data[:incident_status_id_label]})"+data[:title],{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
+  <% end %>
+  <% builder.column(:organization_id_label,{:title=>t(:label_icm_incident_request_organization),:searchable=>true})%>
+  <% builder.column(:priority_id_label,{:title=>t(:label_icm_incident_request_priority), :width => "110px"})%>
+  <% builder.column(:requested_by_label,{:title=>t(:label_icm_incident_request_requested_by), :width => "110px"})%>
 
-           <td>
-             <div><%= link_to( "(#{data[:incident_status_id_label]})#{data[:title]}",{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %></div>
-           </td>
-
-           <td>
-             <div><%= data[:organization_id_label] %></div>
-           </td>
-           <td>
-             <div><%= data[:priority_id_label] %></div>
-           </td>
-
-           <td>
-             <div><%= data[:requested_by_label] %></div>
-           </td>
-
-           <td>
-             <div><%= data[:external_system_id_label] %></div>
-           </td>
-         </tr>
-         <% end -%>
-         </tbody>
-       </table>
-   </div>
- </div>
-<!--  end irm datatable      -->
+  <% builder.column(:external_system_id_label,{:title=>t(:label_irm_external_system),:width => "180px"})%>
+<% end %>
