--- a/app/views/irm/filters/_new_form.html.erb
+++ b/app/views/irm/filters/_new_form.html.erb
@@ -1,160 +1,169 @@
 <%=bo=filter_bo(@rule_filter.bo_code); common_title(:model_name=>bo.bo_model_name,:action_meaning=>t(:label_irm_view_filter_new)) %>
-<%= form_for(@rule_filter,:url=>{:action=>"create",:pca=>params[:pca]},:builder => LabellingFormBuilder) do |f| %>
-    <%= back_url_hidden_field_tag %>
-    <%= f.hidden_field(:filter_type) %>
-    <%= f.hidden_field(:source_code) %>
-    <%= f.hidden_field(:bo_code) %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+
+<%= form_for(@rule_filter,:url=>{:action=>"create",:pca=>params[:pca]},:builder => CustomFormBuilder) do |f| %>
+  <%= back_url_hidden_field_tag %>
+  <%= f.hidden_field(:filter_type) %>
+  <%= f.hidden_field(:source_code) %>
+  <%= f.hidden_field(:bo_code) %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_view_filter_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><a href="<%=params[:back_url]%>"><%= t(:cancel) %></a></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @view_filter%>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-          <span class="requiredLegend">
-            <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-            </span>
-          <span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-          </span>
-      </span>
-      <h3><%=t(:label_irm_view_filter_base_info)%></h3>
-    </div>
-    <div class="pbSubsection">
-
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_view_filter_view_code)%></label></td>
-              <td class="dataCol"><%=f.text_field :filter_code, :required=>true,:size=>40,:irm_uppercase=>true%></td>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_view_filter_view_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :filter_name, :required=>true,:size=>40%></td>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_view_filter_default_flag)%></label></td>
-              <td class="dataCol"><%=f.check_box :default_flag%></td>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
-            </tr>
-
-
-        </tbody>
-      </table>
-    </div>
-    <div class="pbSubheader">
-      <h3><%=t(:label_irm_view_filter_data_range)%></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><%=f.radio_button(:data_range,"Y")%></td>
-              <td class="dataCol"><label><%= filter_data_range_all_label(bo)%></label></td>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><%=f.radio_button(:data_range,"N")%></td>
-              <td class="dataCol"><label><%= filter_data_range_main_label(bo)%></label></td>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="pbSubheader">
-      <h3><%=t(:label_irm_view_filter_criterion)%></h3>
-    </div>
-    <div class="pbSubsection" id="filterContent" href="<%= url_for(:action=>"operator_value",:seq_num=>"{seq_num}",:attribute_id=>"{attribute_id}") %>">
-      <table class="matrix-table" cellpadding="0" cellspacing="0" border="0">
-        <thead>
           <tr>
-            <th width="20%"></th>
-            <th></th>
-            <th><%=t(:irm_filter_criterions_column_code)%></th>
-            <th><div style="width:30%;float:left;"><%=t(:irm_filter_criterions_operator_code)%></div> <div style="width:70%;float:left;"><%=t(:irm_filter_criterions_filter_value)%></div></th>
+            <td class="label-col"><label><%=(t :label_irm_view_filter_view_code)%></label></td>
+            <td class="data-col"><%=f.text_field :filter_code, :required=>true,:size=>40,:irm_uppercase=>true%></td>
+            <td class="label-col"></td>
+            <td class="data-col"></td>
           </tr>
-        </thead>
-        <tbody>
-        <%= f.fields_for :rule_filter_criterions,:normal=>true do |sub_f|%>
-            <tr>
-              <td width="20%"></td>
-              <td width="10px" class="dataCol"><%=sub_f.object.seq_num%>.</td>
-              <td class="dataCol">
-                <%=sub_f.hidden_field(:seq_num)%>
-                <%=sub_f.hidden_field(:bo_code,:value=>@rule_filter.bo_code)%>
-                <%=sub_f.blank_select(:attribute_name,available_view_column(@rule_filter.bo_code),{:required=>true,:size=>10},{:class=>"filterColumnSelect",:ref=>sub_f.object.seq_num})%>
-              </td>
-              <td class="dataCol filterOperationValue" id="filter<%=sub_f.object.seq_num%>">
-                <%= render_exists_operator_and_value(@rule_filter.bo_code,sub_f.object.attribute_name,sub_f)  %>
-              </td>
-            </tr>
-        <%end %>
-        <tr>
-          <td width="20%"></td>
-          <td colspan="3" class="dataCol"><%=(t :label_irm_view_filter_view_condition_clause)%></td>
-        </tr>
-        <tr>
-          <td width="20%"></td>
-          <td class="dataCol" colspan="3"><%=f.text_field :raw_condition_clause, :size=>60,:id=>"rawConditionClause"%></td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="pbSubheader">
-      <h3><%=t(:label_irm_view_filter_access_control)%></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><%=f.radio_button(:restrict_visibility,"Y")%></td>
-              <td class="dataCol"><label><%=t(:label_irm_view_filter_restrict_visibility_for_me)%></label></td>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><%=f.radio_button(:restrict_visibility,"N")%></td>
-              <td class="dataCol"><label><%=t(:label_irm_view_filter_restrict_visibility_for_all)%></label></td>
-              <td class="labelCol"></td>
-              <td class="dataCol"></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><a href="<%=params[:back_url]%>"><%= t(:cancel) %></a></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_view_filter_view_name)%></label></td>
+            <td class="data-col"><%=f.text_field :filter_name, :required=>true,:size=>40%></td>
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_view_filter_default_flag)%></label></td>
+            <td class="data-col"><%=f.check_box :default_flag%></td>
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
       </tbody>
     </table>
+  <% end %>
+  <% content_for :form_block_range do %>
+    <table class="form-table">
+      <tbody>
+          <tr>
+            <td class="label-col"><%=f.radio_button(:data_range,"Y")%></td>
+            <td class="data-col"><label><%= filter_data_range_all_label(bo)%></label></td>
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><%=f.radio_button(:data_range,"N")%></td>
+            <td class="data-col"><label><%= filter_data_range_main_label(bo)%></label></td>
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+      </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_block_criterion do %>
+    <table class="form-table">
+      <thead>
+        <tr>
+          <th width="20%"></th>
+          <th></th>
+          <th><%=t(:irm_filter_criterions_column_code)%></th>
+          <th><div style="width:30%;float:left;"><%=t(:irm_filter_criterions_operator_code)%></div> <div style="width:70%;float:left;"><%=t(:irm_filter_criterions_filter_value)%></div></th>
+        </tr>
+      </thead>
+      <tbody>
+      <%= f.fields_for :rule_filter_criterions,:normal=>true do |sub_f|%>
+          <tr>
+            <td width="20%"></td>
+            <td width="10px" class="data-col"><%=sub_f.object.seq_num%>.</td>
+            <td class="data-col">
+              <%=sub_f.hidden_field(:seq_num)%>
+              <%=sub_f.hidden_field(:bo_code,:value=>@rule_filter.bo_code)%>
+              <%=sub_f.blank_select(:attribute_name,available_view_column(@rule_filter.bo_code),{:required=>true,:size=>10},{:class=>"filterColumnSelect",:ref=>sub_f.object.seq_num})%>
+            </td>
+            <td class="data-col filterOperationValue" id="filter<%=sub_f.object.seq_num%>">
+              <%= render_exists_operator_and_value(@rule_filter.bo_code,sub_f.object.attribute_name,sub_f)  %>
+            </td>
+          </tr>
+      <%end %>
+      <tr>
+        <td width="20%"></td>
+        <td colspan="3" class="data-col"><%=(t :label_irm_view_filter_view_condition_clause)%></td>
+      </tr>
+      <tr>
+        <td width="20%"></td>
+        <td class="data-col" colspan="3"><%=f.text_field :raw_condition_clause, :size=>60,:id=>"rawConditionClause"%></td>
+      </tr>
+      </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_block_control do  %>
+    <table class="form-table">
+      <tbody>
+          <tr>
+            <td class="label-col"><%=f.radio_button(:restrict_visibility,"Y")%></td>
+            <td class="data-col"><label><%=t(:label_irm_view_filter_restrict_visibility_for_me)%></label></td>
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><%=f.radio_button(:restrict_visibility,"N")%></td>
+            <td class="data-col"><label><%=t(:label_irm_view_filter_restrict_visibility_for_all)%></label></td>
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+      </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), params[:back_url], {:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_irm_view_filter_new)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <%= error_for @view_filter%>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_irm_view_filter_base_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+        
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%=t(:label_irm_view_filter_data_range)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_range   %>
+        </div> 
+        
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%=t(:label_irm_view_filter_criterion)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_criterion   %>
+        </div>
+                
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%=t(:label_irm_view_filter_access_control)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_control   %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
   </div>
-</div>
 <% end %>
 
 <script type="text/javascript">
